# django-autocomplete-light

./: .babelrc  .coveragerc  .eslintrc.yml  .gitattributes  .gitignore  .gitmodules  .landscape.yml  .python-version  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG_MODERNISATION.md  CHANGELOG_PR_MERGES.md  CHANGES.txt  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.rst  DONE.md  FAQ.rst  LICENSE  MAINTENANCE.md  MANIFEST.in  MERGE_PLAN.md  README  README.rst  README_RUS.rst  TODO.md  changelog.py  cloc.txt  conftest.py  groups  package-lock.json  package.json  project.config  pyproject.toml  pytest.ini  release.sh  select2.build.js  setup.cfg  (+4 more)
.claude/: ANALYSE.md  BUGS_TEST.md  CHANGELOG_MODERNISATION.md  OVERVIEW.md  PLAN_MODERNISATION.md  PLAN_TESTS.md  SESSION_RESUME.md  TESTS.md  TODO.md
.github/workflows/: ci.yml  release.yml  test.yml
.openshift/action_hooks/: deploy
autocomplete_light/: __init__.py  apps.py  channel.py  checks.py  compat.py  configuration.py  exceptions.py  fields.py  forms.py  generic.py  registry.py  settings.py  shortcuts.py  signals.py  tests.py  urls.py  views.py  widgets.py
autocomplete_light/autocomplete/: __init__.py  base.py  choice_list.py  generic.py  list.py  model.py  model_proxy.py  proxy.py  rest_model.py  shortcuts.py  taggit_choice_list.py  template.py
autocomplete_light/channel/: __init__.py  base.py  (+3 more)
demo/: component_test.html  db.sqlite3  manage.py  settings.py  urls.py  views.py
docs/: Makefile  _forward.rst  alight.rst  api.rst  backends.rst  conf.py  creation.rst  frontends.rst  genericm2m.rst  gfk.rst  gm2m.rst  index.rst  install.rst  linked.rst  make.bat  requirements.txt  select2.rst  tagging.rst  taggit.rst  tagulous.rst  tutorial.rst  upgrade_from_select2_to_alight.rst  upgrade_from_v3_to_v4.rst  upgrade_from_v4_to_v5.rst
src/: __init__.py
test_api_project/: INSTALL.rst  README.rst  db.sqlite  generic_m2m_example  manage.py  project_specific  requirements.txt  templates
test_grappelli/: db.sqlite  manage.py  requirements.txt
test_project/: .coveragerc  INSTALL  INSTALL.rst  README  README.rst  TO_TEST.md  db.sqlite  db.sqlite3  dev.db  requirements.txt  requirements_without_django.txt  reset.json  test_requirements.txt  test_requirements_without_django.txt  urls.py  views.py  wsgi.py
test_remote_project/: README.rst  db.sqlite  manage.py  navigation_autocomplete  static
(+970 files in other folders)
